# salon-booking

./: .env  .gitignore  alembic.ini  check.py  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 56f72a7b431b_initial_schema.py
app/: config.py  database.py  main.py
app/admin/: auth.py  auth_router.py  router.py
app/booking/: router.py
app/models/: __init__.py  appointment.py  client.py  location.py  service.py  staff.py
app/routers/: appointments.py  availability.py  locations.py  services.py  staff.py
app/schemas/: appointment.py  availability.py  service.py
app/services/: availability.py  email.py
app/templates/: _appointment_reschedule.html  _appointment_row.html  _client_contact_card.html  _client_edit_form.html  _reschedule_slots.html  _service_row.html  _staff_row.html  appointments.html  base.html  client_profile.html  clients.html  dashboard.html  login.html  services.html  staff.html
app/templates/booking/: _slots.html  base_booking.html  step1_service.html  step2_staff.html  step3_datetime.html  step4_details.html  step5_confirmation.html
scripts/: debug_auth.py  hash_password.py  seed.py  setup_admin.py
static/: admin.css  booking.css
tests/: conftest.py  test_availability.py
