[project]
name = "salon-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "LAPTOP-62MA70CI\\Felipe Portela",email = "fp.chalhub@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.50.0,<0.51.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "resend (>=2.34.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]